<resources>
    <string name="app_name">Sarah's Project</string>
    <string name="cc">Hi! I am an Informatics Engineering student at the Muhammadiyah University of Sukabumi.</string>
    <string name="gg"> : Siti Sarah</string>
    <string name="pp"> : Sukabumi, 13 Mei 2003</string>
    <string name="qq"> : S1 Teknik Informatika</string>
    <string name="oo"> : Jl. Pasir Pogor, Karang Tengah, Kota Sukabumi.</string>
    <string name="th"> : Islam</string>
    <string name="hh"> s.t.s.r.h</string>
    <string name="zii"> ssarshine@gmail.com</string>
</resources>